fix: smal fix in chat controller